--- a/AceHack2.o-TeamInitials-main/AceHack2.o-TeamInitials-main/student1/core/templates/core/about.html
+++ b/AceHack2.o-TeamInitials-main/AceHack2.o-TeamInitials-main/student1/core/templates/core/about.html
@@ -75,7 +75,7 @@
         <!-- Team item-->
         <div class="col-xl-3 col-sm-6 mb-5">
           <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://bootstrapious.com/i/snippets/sn-about/avatar-2.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-            <h5 class="mb-0">Mudit Paliwal</h5><span class="small text-uppercase text-muted">Bhai Bootstrap gandi hai tailwind bhi (22 panne baane hain)</span>
+            <h5 class="mb-0">Mudit Paliwal</h5><span class="small text-uppercase text-muted">Frontend developer(CFD)</span>
             <ul class="social mb-0 list-inline mt-3">
               <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
               <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
